Fix z-index issue with preloader, now accurately covers screen until all elements are loaded

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,7 @@ body {
 .loader-container {
   width: 100%;
   height: 100%;
+  z-index: 1000;
   position: absolute;
   top: 0;
   left: 0;
